Bug 274942 - contactlist crashes while trying to block a contact
Summary: contactlist crashes while trying to block a contact
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-04 22:45 UTC by Rohan Garg
Modified: 2012-07-06 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (8.92 KB, text/plain)
2011-06-04 22:49 UTC, Rohan Garg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2011-06-04 22:45:41 UTC
Application: telepathy-kde-contactlist (0.1)
KDE Platform Version: 4.6.80 (4.7 Beta1) (Compiled from sources)
Qt Version: 4.7.1
Operating System: Linux 2.6.38-9-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed:
Trying to remove a contact from the telepathy-kde-contactlist
- Unusual behavior I noticed:
the contact list crashed
- Custom settings of the application:
None

As far as i understand it, blocking of contacts has not been implemented yet, it would be best to show a error dialog instead of crashing

The crash can be reproduced every time.

-- Backtrace:
Application: Telepathy KDE Contact List (telepathy-kde-contactlist), signal: Aborted
[KCrash Handler]
#6  0x0000003716e33d05 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x0000003716e37ab6 in abort () at abort.c:92
#8  0x00007fba2436d896 in qt_message_output(QtMsgType, char const*) () from /opt/project-neon/lib/libQtCore.so.4
#9  0x00007fba2436da2c in ?? () from /opt/project-neon/lib/libQtCore.so.4
#10 0x00007fba2436e216 in qFatal(char const*, ...) () from /opt/project-neon/lib/libQtCore.so.4
#11 0x00007fba2436d44f in qt_assert(char const*, char const*, int) () from /opt/project-neon/lib/libQtCore.so.4
#12 0x00007fba2448a2ba in QAbstractItemModel::beginInsertRows(QModelIndex const&, int, int) () from /opt/project-neon/lib/libQtCore.so.4
#13 0x00000000004265ed in AccountsModel::onItemsAdded (this=0x11fb8a0, parent=0x1199240, nodes=...) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/accounts-model.cpp:145
#14 0x0000000000426edc in AccountsModel::qt_metacall (this=0x11fb8a0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fffc0ac1460) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/build/accounts-model.moc:166
#15 0x00007fba2449db3e in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /opt/project-neon/lib/libQtCore.so.4
#16 0x00007fba244b27b8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /opt/project-neon/lib/libQtCore.so.4
#17 0x000000000042ae3f in TreeNode::childrenAdded (this=0x1024bb0, _t1=0x1199240, _t2=...) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/build/tree-node.moc:102
#18 0x000000000042ad44 in TreeNode::qt_metacall (this=0x1024bb0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x7fffc0ac15d0) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/build/tree-node.moc:81
#19 0x00007fba2449db3e in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /opt/project-neon/lib/libQtCore.so.4
#20 0x00007fba244b27b8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /opt/project-neon/lib/libQtCore.so.4
#21 0x000000000042ae3f in TreeNode::childrenAdded (this=0x1199240, _t1=0x1199240, _t2=...) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/build/tree-node.moc:102
#22 0x000000000042c9e0 in AccountsModelItem::onContactsChanged (this=0x1199240, addedContacts=..., removedContacts=...) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/accounts-model-item.cpp:279
#23 0x000000000042d4ba in AccountsModelItem::qt_metacall (this=0x1199240, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x7fffc0ac1890) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/build/accounts-model-item.moc:111
#24 0x00007fba2449db3e in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /opt/project-neon/lib/libQtCore.so.4
#25 0x00007fba244b27b8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /opt/project-neon/lib/libQtCore.so.4
#26 0x00007fba26865e3d in Tp::ContactManager::allKnownContactsChanged (this=0x14af9e0, _t1=..., _t2=..., _t3=...) at /media/Data/GSoC_2011/telepathy/telepathy-qt4/build/TelepathyQt4/_gen/contact-manager.moc.hpp:197
#27 0x00007fba268815d7 in Tp::ContactManager::Roster::computeKnownContactsChanges (this=0x14b54b0, added=..., pendingAdded=..., remotePendingAdded=..., removed=..., details=...) at /media/Data/GSoC_2011/telepathy/telepathy-qt4/TelepathyQt4/contact-manager-roster.cpp:2050
#28 0x00007fba2687a1b5 in Tp::ContactManager::Roster::onContactListNewContactsConstructed (this=0x14b54b0, op=0x1bc88d0) at /media/Data/GSoC_2011/telepathy/telepathy-qt4/TelepathyQt4/contact-manager-roster.cpp:1090
#29 0x00007fba2687186d in Tp::ContactManager::Roster::qt_metacall (this=0x14b54b0, _c=QMetaObject::InvokeMetaMethod, _id=10, _a=0x7fffc0ac1d70) at /media/Data/GSoC_2011/telepathy/telepathy-qt4/build/TelepathyQt4/_gen/contact-manager-internal.moc.hpp:159
#30 0x00007fba2449db3e in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /opt/project-neon/lib/libQtCore.so.4
#31 0x00007fba244b27b8 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /opt/project-neon/lib/libQtCore.so.4
#32 0x00007fba268dcd41 in Tp::PendingOperation::finished (this=0x1bc88d0, _t1=0x1bc88d0) at /media/Data/GSoC_2011/telepathy/telepathy-qt4/build/TelepathyQt4/_gen/pending-operation.moc.hpp:98
#33 0x00007fba268dd311 in Tp::PendingOperation::emitFinished (this=0x1bc88d0) at /media/Data/GSoC_2011/telepathy/telepathy-qt4/TelepathyQt4/pending-operation.cpp:116
#34 0x00007fba268dccef in Tp::PendingOperation::qt_metacall (this=0x1bc88d0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x1bd8580) at /media/Data/GSoC_2011/telepathy/telepathy-qt4/build/TelepathyQt4/_gen/pending-operation.moc.hpp:86
#35 0x00007fba268d3af4 in Tp::PendingContacts::qt_metacall (this=0x1bc88d0, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0x1bd8580) at /media/Data/GSoC_2011/telepathy/telepathy-qt4/build/TelepathyQt4/_gen/pending-contacts.moc.hpp:75
#36 0x00007fba2449db3e in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /opt/project-neon/lib/libQtCore.so.4
#37 0x00007fba244acf8a in QMetaCallEvent::placeMetaCall(QObject*) () from /opt/project-neon/lib/libQtCore.so.4
#38 0x00007fba244ae1f7 in QObject::event(QEvent*) () from /opt/project-neon/lib/libQtCore.so.4
#39 0x00007fba2355bd46 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /opt/project-neon/lib/libQtGui.so.4
#40 0x00007fba23559334 in QApplication::notify(QObject*, QEvent*) () from /opt/project-neon/lib/libQtGui.so.4
#41 0x00007fba261e20a4 in KApplication::notify(QObject*, QEvent*) () from /opt/project-neon/lib/libkdeui.so.5
#42 0x00007fba2449599a in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /opt/project-neon/lib/libQtCore.so.4
#43 0x00007fba244996e7 in QCoreApplication::sendEvent(QObject*, QEvent*) () from /opt/project-neon/lib/libQtCore.so.4
#44 0x00007fba24496bb2 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /opt/project-neon/lib/libQtCore.so.4
#45 0x00007fba244967d3 in QCoreApplication::sendPostedEvents(QObject*, int) () from /opt/project-neon/lib/libQtCore.so.4
#46 0x00007fba244ced2d in QCoreApplication::sendPostedEvents() () from /opt/project-neon/lib/libQtCore.so.4
#47 0x00007fba244cdd0e in ?? () from /opt/project-neon/lib/libQtCore.so.4
#48 0x0000003718a42bcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#49 0x0000003718a433a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#50 0x0000003718a43639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#51 0x00007fba244ce5d7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /opt/project-neon/lib/libQtCore.so.4
#52 0x00007fba236340d2 in ?? () from /opt/project-neon/lib/libQtGui.so.4
#53 0x00007fba24493532 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /opt/project-neon/lib/libQtCore.so.4
#54 0x00007fba24493686 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /opt/project-neon/lib/libQtCore.so.4
#55 0x00007fba2449608c in QCoreApplication::exec() () from /opt/project-neon/lib/libQtCore.so.4
#56 0x00007fba23558ebe in QApplication::exec() () from /opt/project-neon/lib/libQtGui.so.4
#57 0x000000000042f235 in main (argc=1, argv=0x7fffc0ac2db8) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/main.cpp:60

Reported using DrKonqi
Comment 1 Rohan Garg 2011-06-04 22:49:11 UTC
Created attachment 60631 [details]
New crash information added by DrKonqi

telepathy-kde-contactlist (0.1) on KDE Platform 4.6.80 (4.7 Beta1) using Qt 4.7.1

- What I was doing when the application crashed:
Seems it also crashes when trying to unblock a contact via a third party application
- Unusual behavior I noticed:
The contact list crash
- Custom settings of the application:
None

-- Backtrace (Reduced):
#11 0x00007fe0ad01e44f in qt_assert(char const*, char const*, int) () from /opt/project-neon/lib/libQtCore.so.4
#12 0x00007fe0ad13b2ba in QAbstractItemModel::beginInsertRows(QModelIndex const&, int, int) () from /opt/project-neon/lib/libQtCore.so.4
#13 0x00000000004265ed in AccountsModel::onItemsAdded (this=0xdf5390, parent=0xd82a90, nodes=...) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/accounts-model.cpp:145
#14 0x0000000000426edc in AccountsModel::qt_metacall (this=0xdf5390, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fffc5fe5960) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/build/accounts-model.moc:166
[...]
#17 0x000000000042ae3f in TreeNode::childrenAdded (this=0xea5c30, _t1=0xd82a90, _t2=...) at /media/Data/GSoC_2011/telepathy/telepathy-contact-list/build/tree-node.moc:102
Comment 2 Martin Klapetek 2011-10-28 15:03:28 UTC
Git commit 619f6a20866e1b0fe43be83343c34be7a17476b7 by Martin Klapetek.
Committed on 28/10/2011 at 16:59.
Pushed by mklapetek into branch 'master'.

Fix a crash with debug builds (hitting an assert inside Qt)

Reviewed-by: Francesco Nwokeka
BUG: 274942

M  +3    -1    models/accounts-model-item.cpp

http://commits.kde.org/telepathy-common-internals/619f6a20866e1b0fe43be83343c34be7a17476b7