Fix a crash with debug builds (hitting an assert inside Qt)

Reviewed-by: Francesco Nwokeka
BUG: 274942